@@ -27,7 +27,7 @@ dnl AM_PROG_LIBTOOL
 dnl ******************************
 dnl Gettext stuff
 dnl ******************************
-GETTEXT_PACKAGE=$PACKAGE
+GETTEXT_PACKAGE=sodipodi
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Translation domain used])
 dnl Add the languages which your application supports here.
